# muck

./: Makefile  README  README.Makefile  README.md  assert_utils.h  atomic_utils.h  birdlock.h  cover.gen  env.c  env.h  error.c  error.h  expr.c  expr.h  fdata.c  fdata.h  file.c  file.h  files.c  files.h  files_par.c  files_par.h  lua.c  lua.h  math_utils.h  meson.build  meson_options.txt  metadata.h  muck.1  muck.c  muck.lua  muck_playlist.py  player.c  player.h  playlist.c  playlist.h  regex.h  repeat.h  rnd.c  rnd.h  (+5 more)
compat/: pthread.h  string.h
patches/: avformat-file-Detect-seekable-pipe.patch
scripts/: playlist-list  playlist-merge  playlist-update
test/: functional_test  functional_test_long  unit_test.c
tests/: test_muck_playlist
